[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy==1.17.3; python_version=='2.7' and platform_system!='AIX'",
    "numpy==1.17.3; python_version=='3.5' and platform_system!='AIX'",
    "numpy==1.17.3; python_version=='3.6' and platform_system!='AIX'",
    "numpy==1.17.3; python_version>='3.7' and platform_system!='AIX'",
    "numpy==1.17.3; python_version=='2.7' and platform_system=='AIX'",
    "numpy==1.17.3; python_version=='3.5' and platform_system=='AIX'",
    "numpy==1.17.3; python_version=='3.6' and platform_system=='AIX'",
    "numpy==1.17.3; python_version>='3.7' and platform_system=='AIX'",
]
